<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.AuthPhoneFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_loghelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="73dp"
        android:fontFamily="@font/stolzl_bold"
        android:text="@string/text_logisthelper"
        android:textColor="#2B2D35"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/iv_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/stolzl_regular"
        android:text="@string/welcome_title"
        android:textColor="#2B2D35"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_loghelp" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/stolzl_book"
        android:text="@string/enter_your_number_title"
        android:textColor="#3C4049"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <com.fredporciuncula.phonemoji.PhonemojiTextInputLayout
        android:id="@+id/pm_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/phone_number"
        app:boxCornerRadiusBottomEnd="18dp"
        app:boxCornerRadiusBottomStart="18dp"
        app:boxCornerRadiusTopEnd="18dp"
        app:boxCornerRadiusTopStart="18dp"
        app:boxStrokeColor="@color/dark"
        app:boxStrokeWidth="2dp"
        app:cursorColor="@color/dark"
        app:hintTextColor="@color/dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description">

        <com.fredporciuncula.phonemoji.PhonemojiTextInputEditText
            android:id="@+id/t_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:digits="0123456789+"
            android:ems="10"
            android:fontFamily="@font/stolzl_book"
            android:inputType="phone"
            android:maxLength="16"
            android:textColor="@color/dark"
            app:phonemoji_initialRegionCode="RU" />
    </com.fredporciuncula.phonemoji.PhonemojiTextInputLayout>

    <Button
        android:id="@+id/b_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/alt_black"
        android:text="@string/next_button"
        android:textColor="#FFFFFF"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pm_text_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>